--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "我大概是个这样的人"
+description: "244 是谁"
 header-img: "https://ohuuyffq2.qnssl.com/shanghai3.jpg"
 ---
 
@@ -17,14 +17,14 @@ header-img: "https://ohuuyffq2.qnssl.com/shanghai3.jpg"
     <!--copied from markdown -->
     <blockquote>
       <p>
-        写点有趣的代码，<br>
-        做点有用的产品，<br>
-        拍点漂亮的相片，<br>
-        让自己开心开心。
+        喜欢猫咪，<br>
+        喜欢吃鱼，<br>
+        喜欢摄影，<br>
+        喜欢用自己的文字记下人间百态。
       </p>
     </blockquote>
 
-    <p>不喜欢脱离生产环境谈体验</p>
+    <p>这个世界每天都在发生有趣的事情</p>
     <!-- <p></p> -->
     <!-- <h5>Talks</h5>
 
