--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "244 是谁"
-header-img: "https://ohuuyffq2.qnssl.com/shanghai3.jpg"
+header-img: "https://ohuuyffq2.qnssl.com/space-squashed.png"
 ---
 
 <!-- Language Selector -->
